# alt-ergo

./: .gitignore  Makefile  alt-ergo-lib.opam  alt-ergo-lib.opam.locked  configure.ml  dune  dune-project  shell.nix
.github/workflows/: build.yml
doc/alt-ergo/: dune  index.mld  native_language.mld
doc/alt-ergo-plugin-ab-why3/: dune  index.mld
doc/alt-ergo-plugin-fmsimplex/: index.mld
examples/: lib_usage.ml
next/: .buildinfo  Model_generation.html  genindex.html  index.html  objects.inv  search.html
next/.doctrees/: environment.pickle
next/API/: index.html
next/About/: changes.html  index.html  license.html
next/Alt_ergo_native/: 00_summary.html  01_declaration_of_symbols.html  03_declaration_of_axioms.html  04_setting_goals.html  05_theories.html  06_control_flow.html  07_syntax_of_declarations_and_expressions.html  index.html
next/Dev/: architecture.html  contributing.html  index.html
next/Install/: index.html
next/Plugins/: ab_why3.html  index.html
next/SMT-LIB_language/: index.html
next/Usage/: index.html
nix/: default.nix  patricia-tree.nix  sources.json
rsc/extra/: worker_json_example.json
src/: dune
src/lib/: dune
src/lib/ccx/: ac.ml  ac.mli  adt.ml  adt.mli  adt_rel.ml  adt_rel.mli  arith.ml  arith.mli  arrays.ml  arrays.mli  arrays_rel.ml  bitv.ml  bitv.mli  bitv_rel.ml  ccx.ml  ccx.mli  dune  enum.ml  enum.mli  enum_rel.ml  inequalities.ml  inequalities.mli  instances.ml  instances.mli  intervalCalculus.ml  intervalCalculus.mli  intervals.ml  intervals.mli  ite.ml  ite_rel.ml  matching.ml  matching.mli  polynome.ml  polynome.mli  polynomial.ml  polynomial.mli  records.ml  records.mli  records_rel.ml  relation.ml  (+10 more)
src/lib/reasoners/: ac.ml  ac.mli  adt.ml  adt.mli  adt_rel.ml  arith.ml  arith.mli  arrays.ml  arrays.mli  arrays_rel.ml  bitv.ml  bitv_rel.ml  ccx.ml  ccx.mli  dune  enum.ml  enum.mli  enum_rel.ml  fun_sat.ml  inequalities.ml  inequalities.mli  instances.ml  instances.mli  intervalCalculus.ml  intervals.ml  intervals.mli  ite_rel.ml  matching.ml  matching.mli  matching_types.mli  polynome.ml  polynome.mli  records.ml  records_rel.ml  relation.ml  sat_solver.ml  sat_solver.mli  sat_solver_sig.ml  sat_solver_sig.mli  satml.ml  (+16 more)
src/lib/util/: compat.ml  compat.mli  dune  emap.ml  emap.mli  formatshims.ml  gc_debug.ml  gc_debug.mli  hcons.ml  hcons.mli  heap.ml  heap_intf.ml  hstring.ml  hstring.mli  iheap.ml  iheap.mli  lists.ml  loc.ml  loc.mli  myDynlink.ml  myUnix.ml  myUnix.mli  my_unix.ml  my_unix.mli  numbers.ml  numbers.mli  numbersInterface.mli  numsNumbers.ml  numsNumbers.mli  options.ml  options.mli  printer.ml  printer.mli  steps.ml  steps.mli  string.ml  string.mli  timers.ml  timers.mli  util.ml  (+6 more)
src/parsers/: dune  myZip.ml  myZip.mli  native_lexer.mll  native_parser.mly  parsers.ml  (+5 more)
tools/: gentest.ml
(+97 files in other folders)
