(env
 (dev ;; This profil is used (default) to dev without optimisation and blocking warnings.
  (flags
   (:standard -bin-annot -w -22 -warn-error -A))
  (ocamlopt_flags -g)
  (js_of_ocaml
    (flags (:standard --pretty --no-inline --debug-info --source-map))))
 (ci ;; This profile is used by the CI.
  (flags
   (:standard -bin-annot -w -22 -warn-error +A))
  (ocamlopt_flags -g))
 (release ;; The release profile has optimizations enabled.
  (flags
   (:standard -bin-annot -w -22))
  (ocamlopt_flags -O3 -unbox-closures)
  (js_of_ocaml
    (flags (:standard --no-source-map))))
)

(subdir runtest
  (dynamic_include ../gentest/dune.inc))

(subdir gentest
  (rule
   (deps (source_tree ../tests))
   (action
    (with-stdout-to dune.inc (run ../tools/gentest.exe --kind rule ../tests)))))
