(library
 (name alt_ergo_lib_ccx)
 (public_name alt-ergo-lib.ccx)
 (modules Ac Adt Adt_rel Arith Arrays Arrays_rel Bitv Bitv_rel Ccx Enum Enum_rel Inequalities IntervalCalculus Intervals Polynome Records Records_rel Relation Shostak Uf Use Theory Instances Matching)
 (libraries
 alt_ergo_lib_util
 alt_ergo_lib_ast
 alt_ergo_lib_intf
 alt_ergo_lib_ite))
