(library
 (name alt_ergo_lib_reasoners)
 (public_name alt-ergo-lib.reasoners)
 (modules_without_implementation matching_types sig sig_rel)
 (modules Ac Arith Arrays Arrays_rel Bitv Ccx Shostak Relation Enum Enum_rel
   Fun_sat Inequalities Bitv_rel Th_util Adt Adt_rel Instances
   IntervalCalculus Intervals Ite_rel Ite Matching Matching_types Polynome
   Records Records_rel Satml_frontend_hybrid Satml_frontend Satml Sat_solver
   Sat_solver_sig Sig Sig_rel Theory Uf Use)
 (libraries alt_ergo_lib_structs))
